--- a/AlanDuongCom/AlanDuongCom.csproj
+++ b/AlanDuongCom/AlanDuongCom.csproj
@@ -44,7 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataElement.cs" />
-    <Compile Include="Nav.cs" />
     <Compile Include="NavItem.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Program.cs" />
@@ -56,6 +55,8 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Data\dropDownItem.html" />
+    <Content Include="Data\dropUp.html" />
     <Content Include="Data\navItemActive.html" />
     <Content Include="Data\basic.html" />
     <Content Include="Data\index.html" />
