--- a/AlanDuongCom/AlanDuongCom.csproj
+++ b/AlanDuongCom/AlanDuongCom.csproj
@@ -62,6 +62,8 @@
     <Content Include="Data\index.html" />
     <Content Include="Data\nav.html" />
     <Content Include="Data\navItem.html" />
+    <Content Include="Data\supercruise.html" />
+    <Content Include="Data\wip.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
