--- a/AlanDuongCom/AlanDuongCom.csproj
+++ b/AlanDuongCom/AlanDuongCom.csproj
@@ -56,6 +56,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Data\alanduongcom.html" />
+    <Content Include="Data\calculatorMilMoa.html" />
     <Content Include="Data\dropDownItem.html" />
     <Content Include="Data\dropUp.html" />
     <Content Include="Data\navItemActive.html" />
