working simple blog post functionality

--- a/AlanDuongCom/AlanDuongCom.csproj
+++ b/AlanDuongCom/AlanDuongCom.csproj
@@ -61,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\alanduongcom.html" />
+    <Content Include="Data\blog.html" />
+    <Content Include="Data\blogPostCard.html" />
     <Content Include="Data\calculatorMilMoa.html" />
     <Content Include="Data\dominocomputer.html" />
     <Content Include="Data\dropDownItem.html" />
