add supercruise 2 page

--- a/AlanDuongCom/AlanDuongCom.csproj
+++ b/AlanDuongCom/AlanDuongCom.csproj
@@ -74,6 +74,7 @@
     <Content Include="Data\nav.html" />
     <Content Include="Data\navItem.html" />
     <Content Include="Data\springysanic.html" />
+    <Content Include="Data\supercruise2.html" />
     <Content Include="Data\supercruise.html" />
     <Content Include="Data\twotoner.html" />
     <Content Include="Data\wip.html" />
